{
  "version": 4,
  "terraform_version": "0.14.2",
  "serial": 247,
  "lineage": "8c677955-1e31-777e-cb27-9056998c228d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777041230301:security-group/sg-45612b4f",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-45612b4f",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-1e2d8163"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777041230301:subnet/subnet-d3108d8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "id": "subnet-d3108d8c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "777041230301",
            "state": "available",
            "vpc_id": "vpc-1e2d8163"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777041230301:subnet/subnet-2b78e84d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-2b78e84d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "777041230301",
            "state": "available",
            "vpc_id": "vpc-1e2d8163"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777041230301:subnet/subnet-c29907e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "id": "subnet-c29907e3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "777041230301",
            "state": "available",
            "vpc_id": "vpc-1e2d8163"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777041230301:vpc/vpc-1e2d8163",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-3712ab58",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-771a530d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-1e2d8163",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-4bd9f235",
            "owner_id": "777041230301",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-2898349506",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-45612b4f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 6379,
            "id": "sgrule-3884036096",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-45612b4f",
            "self": false,
            "source_security_group_id": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.url_shortener_service",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:777041230301:loadbalancer/app/url-shortener-lb/f8990aa7b62e3b19",
            "arn_suffix": "app/url-shortener-lb/f8990aa7b62e3b19",
            "dns_name": "url-shortener-lb-1929857729.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:777041230301:loadbalancer/app/url-shortener-lb/f8990aa7b62e3b19",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "url-shortener-lb",
            "security_groups": [
              "sg-0b97098ec0cf4f4c3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-2b78e84d"
              },
              {
                "subnet_id": "subnet-c29907e3"
              },
              {
                "subnet_id": "subnet-d3108d8c"
              }
            ],
            "subnets": [
              "subnet-2b78e84d",
              "subnet-c29907e3",
              "subnet-d3108d8c"
            ],
            "vpc_id": "vpc-1e2d8163",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_subnet.subnet_1a",
            "data.aws_subnet.subnet_1b",
            "data.aws_subnet.subnet_1c",
            "data.aws_vpc.default_vpc",
            "module.url_shortener_service.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.url_shortener_service",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:777041230301:listener/app/url-shortener-lb/f8990aa7b62e3b19/6417209c37e71e1e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:777041230301:targetgroup/url-shortener-lb-tg/e3be999743359c68",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:777041230301:listener/app/url-shortener-lb/f8990aa7b62e3b19/6417209c37e71e1e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:777041230301:loadbalancer/app/url-shortener-lb/f8990aa7b62e3b19",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.subnet_1a",
            "data.aws_subnet.subnet_1b",
            "data.aws_subnet.subnet_1c",
            "data.aws_vpc.default_vpc",
            "module.url_shortener_service.aws_lb.alb",
            "module.url_shortener_service.aws_lb_target_group.url_shortener_group",
            "module.url_shortener_service.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.url_shortener_service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "url_shortener_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:777041230301:targetgroup/url-shortener-lb-tg/e3be999743359c68",
            "arn_suffix": "targetgroup/url-shortener-lb-tg/e3be999743359c68",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:777041230301:targetgroup/url-shortener-lb-tg/e3be999743359c68",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "url-shortener-lb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-1e2d8163"
          },
          "dependencies": [
            "data.aws_subnet.subnet_1a",
            "data.aws_subnet.subnet_1b",
            "data.aws_subnet.subnet_1c",
            "data.aws_vpc.default_vpc",
            "module.url_shortener_service.aws_lb.alb",
            "module.url_shortener_service.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.url_shortener_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777041230301:security-group/sg-0b97098ec0cf4f4c3",
            "description": "url-shortener-alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b97098ec0cf4f4c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "url-shortener-alb",
            "name_prefix": "",
            "owner_id": "777041230301",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-1e2d8163"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.url_shortener_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:777041230301:security-group/sg-093b13ed329f594ae",
            "description": "url-shortener-service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093b13ed329f594ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "url-shortener-service",
            "name_prefix": "",
            "owner_id": "777041230301",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-1e2d8163"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default_vpc"
          ]
        }
      ]
    }
  ]
}